# PrintFromEmail

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  allowed_senders.txt.example  compose.yaml  entrypoint.sh  pyproject.toml
.claude/: settings.local.json
app/: allowlist.py  config.py  converter.py  interfaces.py  mailbox.py  main.py  models.py  parser.py  printer.py  state.py  storage.py
tests/: test_allowlist.py  test_parser.py  test_printer.py
